--- a/papers/actor-based-large-neighborhood-search/refs.bib
+++ b/papers/actor-based-large-neighborhood-search/refs.bib
@@ -597,6 +597,52 @@
 	            organizing, analyzing, and auditing planning},
 	langid = {english},
 }
+@incollection{palmerMaintenancePlanningScheduling2019weeklyscheduling,
+	title = {Maintenance {{Planning}} and {{Scheduling Handbook}}, 4th {{Edition
+	         }}},
+	author = {Palmer, Richard D.},
+	year = {2019},
+	month = sep,
+	edition = {4th edition},
+	publisher = {McGraw Hill},
+	abstract = {The industry-standard resource for maintenance planning and
+	            scheduling---thoroughly revised for the latest advancesWritten by
+	            a Certified Maintenance and Reliability Professional (CMRP) with
+	            more than three decades of experience, this resource provides
+	            proven planning and scheduling strategies that will take any
+	            maintenance organization to the next level of performance. The
+	            book resolves common industry frustration with planning and
+	            reduces the complexity of scheduling in addition to dealing with
+	            reactive maintenance. You will find coverage of estimating labor
+	            hours, setting the level of plan detail, creating practical
+	            weekly and daily schedules, kitting parts, and more, all designed
+	            to increase your workforce without hiring. Much of the text
+	            applies the timeless management principles of Dr. W. Edwards
+	            Deming and Dr. Peter F. Drucker. You will learn how you can do
+	            more proactive work when your hands are full of reactive
+	            work.Maintenance Planning and Scheduling Handbook, Fourth Edition
+	            , features more new case studies showing real world successes, a
+	            new chapter on getting better storeroom support, major revisions
+	            that describe the best KPIs for planning, major additions to the
+	            issue of ``selling'' planning to gain support, revisions to make
+	            work order codes more useful, a new appendix on numerically
+	            auditing planning success, and a new appendix devoted entirely to
+	            selecting a great maintenance planner.Maintenance Planning and
+	            Scheduling Handbook, Fourth Edition covers:{$\bullet$}The
+	            business case for the benefit of planning{$\bullet$}Planning
+	            principles{$\bullet$}Scheduling principles{$\bullet$}Handling
+	            reactive maintenance{$\bullet$}Planning a work order{$\bullet$}
+	            Creating a weekly schedule{$\bullet$}Daily scheduling and
+	            supervision{$\bullet$}Parts and planners{$\bullet$}The computer
+	            CMMS in maintenance{$\bullet$}How planning works with PM, PdM,
+	            and projects{$\bullet$}Controlling planning: the best KPIs KPIs
+	            for planning and overall maintenance{$\bullet$}Shutdown,
+	            turnaround, overhaul, and outage management{$\bullet$}Selling,
+	            organizing, analyzing, and auditing planning},
+	langid = {english},
+	chapter = {6},
+	pages = {255--288},
+}
 
 @article{calvaresiRealtimeMultiagentSystems2021,
 	title = {Real-Time Multi-Agent Systems: Rationality, Formal Model, and
