--- a/papers/actor-based-large-neighborhood-search/tex/introduction.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/introduction.tex
@@ -38,15 +38,15 @@ multi-objective optimization~\citep{ehrgott2002multiple} is applied to find a
 Pareto Front~\citep{Pareto1897} a negotiating process still is needed between
 the actors to select the final schedule.
 
-This paper proposes a solution method that will allow for real-time
-optimization based on actor/user interaction and a connection to a dynamic
-data source, effectively managing the changes to the parameter space as
-they occur. The proposed solution method will be tested on the weekly
-maintenance scheduling problem \citep{palmerMaintenancePlanningScheduling2019weeklyscheduling}
+This paper proposes a solution method that will allow for real-time optimization
+based on actor/user interaction and a connection to a dynamic data source,
+effectively managing the changes to the parameter space as they occur. The
+proposed solution method will be tested on the weekly maintenance scheduling
+problem \citep{palmerMaintenancePlanningScheduling2019weeklyscheduling}
 which closely resembles a variant of the multi-compartment multi-knapsack
-problem (MCMKP)~\citep{do2007constrained}. It should be noted that the
-scientific maintenance scheduling literature can deviate significantly
-from its practical implementation which is detailed in
+problem (MCMKP)~\citep{do2007constrained}. It should be noted
+that the scientific maintenance scheduling literature can deviate
+significantly from its practical implementation which is detailed in
 \citep{palmerMaintenancePlanningScheduling2019}. The solution method is based
 on the large neighborhood search (LNS~\citep{shaw1998using}) metaheuristic and
 is in this paper described as actor-based large neighborhood search (AbLNS). LNS
