--- a/papers/actor-based-large-neighborhood-search/tex/results.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/results.tex
@@ -35,8 +35,9 @@ Instance 1 & 3487                & 16               & 52             \\ \bottomr
 The optimization problem has three terms and it could be argued that the
 a pareto front should be calculated on the value of the different weightings
 between them. To not lose sight of the main contribution of the paper the
-value of the $\ParClusteringValue$ and $\ParStrategicPenalty$ has been set so
-that the $\ParStrategicPenalty$ always dominates the $\ParStrategicUrgency$ and
+value of the $\ParClusteringValue$ and
+$\ParStrategicResourcePenalty$ has been set so
+that the $\ParStrategicResourcePenalty$ always dominates the $\ParStrategicUrgency$ and
 that the $\ParStrategicUrgency$ always dominates the $\ParClusteringValue$.
 Furthermore the $\ParClusteringValue$ has been excluded from the results section
 to put more focus on the user-input interaction.
